deploy.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: fastapi1:latest
        ports:
        - containerPort: 8000
          protocol: TCP
          name: http
        resources:
          limits:
            cpu: 50m
            memory: 50Mi
          requests:
            cpu: 50m
            memory: 50Mi

---

apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  type: LoadBalancer


---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: statistics-client
  labels:
    app: statistics-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statistics-client
  template:
    metadata:
      labels:
        app: statistics-client
    spec:
      containers:
      - name: statistics-client
        image: script1:latest
        ports:
        # - containerPort: 5000
        #   protocol: TCP
        #   name: http
        resources:
          limits:
            cpu: 50m
            memory: 50Mi
          requests:
            cpu: 50m
            memory: 50Mi

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

kind: VirtualService
metadata:
  name: app-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        exact: /time
    route:
    - destination:
        host: web-service
        port:
          number: 80
  - match:
    - uri:
        exact: /statistics
    route:
    - destination:
        host: web-service
        port:
          number: 80


---

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: worldtimeapi
spec:
  hosts:
  - "worldtimeapi.org"
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
